# pagamentos

./: Dockerfile  pyproject.toml  settings.py
api/: main.py  schemas.py
tests/: conftest.py  test_api.py  test_token.py  test_workers.py
workers/: worker.py
